@@ -1,5 +1,9 @@
 2013-06-14  Jay Berkenbilt  <ejb@ql.org>
 
+	* Add /Length key to crypt filter dictionary for encrypted files.
+	This key is optional, but some version of MacOS reportedly fail to
+	open encrypted PDF files without this key.
+
 	* Bug fix: properly handle object stream generation when the
 	original file has some compressible objects with generation != 0.
 
